--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
-  <<: *default
+  adapter: sqlite3
   database: social-app-api_development
 
   # The specified database role being used to connect to postgres.
@@ -56,7 +56,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: sqlite3
   database: social-app-api_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
